[gd_scene load_steps=21 format=3 uid="uid://b1ik2ctx5ysx4"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_wggdf"]
[ext_resource type="Texture2D" uid="uid://c3c67e56ssvml" path="res://assets/fondo.png" id="2_x0201"]
[ext_resource type="TileSet" uid="uid://q42oo4vhpu2f" path="res://wallress.tres" id="3_2syee"]
[ext_resource type="Texture2D" uid="uid://0dlicstsrkpy" path="res://assets/hilorojo.png" id="4_s52c7"]
[ext_resource type="Script" path="res://scripts/teleporters.gd" id="5_6se5o"]
[ext_resource type="Script" path="res://scripts/player.gd" id="6_j6okp"]
[ext_resource type="Texture2D" uid="uid://bqeojlr7a8ggk" path="res://assets/player_punch.png" id="7_bm6qa"]
[ext_resource type="Texture2D" uid="uid://bap5sls2vvgrb" path="res://assets/light_01.png" id="8_oucd7"]
[ext_resource type="Texture2D" uid="uid://dd2gh2ti6h23" path="res://icon.svg" id="9_gp727"]
[ext_resource type="Script" path="res://scripts/duplicados.gd" id="10_o8vti"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qsaoq"]
texture = ExtResource("4_s52c7")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0

[sub_resource type="TileSet" id="TileSet_b2o0y"]
sources/1 = SubResource("TileSetAtlasSource_qsaoq")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_04386"]
size = Vector2(32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g44l7"]
atlas = ExtResource("7_bm6qa")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_se405"]
atlas = ExtResource("7_bm6qa")
region = Rect2(96, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsxs3"]
atlas = ExtResource("7_bm6qa")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pen3u"]
atlas = ExtResource("7_bm6qa")
region = Rect2(128, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ytphf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g44l7")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_se405")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsxs3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pen3u")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lcyll"]
radius = 4.0
height = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hff34"]

[node name="main" type="Node2D"]
script = ExtResource("1_wggdf")

[node name="Laberinto" type="Node2D" parent="."]
metadata/_edit_group_ = true

[node name="LaberintosFalsos" type="Node2D" parent="Laberinto"]
visible = false
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Laberinto/LaberintosFalsos"]
position = Vector2(-224, 0)
texture = ExtResource("2_x0201")

[node name="Sprite2D2" type="Sprite2D" parent="Laberinto/LaberintosFalsos"]
position = Vector2(736, 32)
texture = ExtResource("2_x0201")

[node name="Sprite2D3" type="Sprite2D" parent="Laberinto/LaberintosFalsos"]
position = Vector2(256, -224)
texture = ExtResource("2_x0201")

[node name="Sprite2D4" type="Sprite2D" parent="Laberinto/LaberintosFalsos"]
position = Vector2(-224, 480)
texture = ExtResource("2_x0201")

[node name="Sprite2D5" type="Sprite2D" parent="Laberinto/LaberintosFalsos"]
position = Vector2(736, 512)
texture = ExtResource("2_x0201")

[node name="Sprite2D6" type="Sprite2D" parent="Laberinto/LaberintosFalsos"]
position = Vector2(256, 736)
texture = ExtResource("2_x0201")

[node name="Sprite2D" type="Sprite2D" parent="Laberinto"]
position = Vector2(256, 256)
texture = ExtResource("2_x0201")

[node name="Muros" type="TileMap" parent="Laberinto"]
tile_set = ExtResource("3_2syee")
format = 2
layer_0/tile_data = PackedInt32Array(983040, 65540, 1, 983041, 65540, 1, 983042, 65540, 1, 983043, 65540, 1, 983044, 65540, 1, 983045, 65540, 1, 983046, 65540, 1, 983047, 65540, 1, 983048, 65540, 1, 983049, 65540, 1, 983050, 65540, 1, 983051, 65540, 1, 983052, 65540, 1, 983053, 65540, 1, 983054, 65540, 1, 983055, 65540, 1, 917519, 65540, 1, 851983, 65540, 1, 786447, 65540, 1, 720911, 65540, 1, 589839, 65540, 1, 524303, 65540, 1, 458767, 65540, 1, 393231, 65540, 1, 262159, 65540, 1, 196623, 65540, 1, 131087, 65540, 1, 65551, 65540, 1, 15, 65540, 1, 13, 65540, 1, 12, 65540, 1, 11, 65540, 1, 9, 65540, 1, 8, 65540, 1, 7, 65540, 1, 6, 65540, 1, 5, 65540, 1, 4, 65540, 1, 3, 65540, 1, 2, 65540, 1, 1, 65540, 1, 0, 65540, 1, 65536, 65540, 1, 196608, 65540, 1, 262144, 65540, 1, 327680, 65540, 1, 393216, 65540, 1, 458752, 65540, 1, 524288, 65540, 1, 589824, 65540, 1, 655360, 65540, 1, 720896, 65540, 1, 851968, 65540, 1, 917504, 65540, 1, 131074, 65540, 1, 196610, 65540, 1, 196611, 65540, 1, 196612, 65540, 1, 65540, 65540, 1, 65542, 65540, 1, 131078, 65540, 1, 196614, 65540, 1, 262150, 65540, 1, 327681, 65540, 1, 327682, 65540, 1, 327684, 65540, 1, 393220, 65540, 1, 458756, 65540, 1, 458755, 65540, 1, 458754, 65540, 1, 327686, 65540, 1, 393222, 65540, 1, 458758, 65540, 1, 589826, 65540, 1, 655362, 65540, 1, 720898, 65540, 1, 720899, 65540, 1, 589828, 65540, 1, 589829, 65540, 1, 655365, 65540, 1, 720901, 65540, 1, 786437, 65540, 1, 917509, 65540, 1, 851969, 65540, 1, 851970, 65540, 1, 851971, 65540, 1, 655367, 65540, 1, 720903, 65540, 1, 786439, 65540, 1, 851975, 65540, 1, 851976, 65540, 1, 851977, 65540, 1, 655369, 65540, 1, 720905, 65540, 1, 786441, 65540, 1, 720906, 65540, 1, 720907, 65540, 1, 851978, 65540, 1, 851979, 65540, 1, 917515, 65540, 1, 851981, 65540, 1, 786445, 65540, 1, 720909, 65540, 1, 720910, 65540, 1, 589838, 65540, 1, 589837, 65540, 1, 458765, 65540, 1, 393229, 65540, 1, 327693, 65540, 1, 262157, 65540, 1, 196621, 65540, 1, 65549, 65540, 1, 131083, 65540, 1, 65547, 65540, 1, 131082, 65540, 1, 131081, 65540, 1, 131080, 65540, 1, 262152, 65540, 1, 262153, 65540, 1, 393224, 65540, 1, 393225, 65540, 1, 327689, 65540, 1, 327690, 65540, 1, 327691, 65540, 1, 262155, 65540, 1, 393227, 65540, 1, 524296, 65540, 1, 524299, 65540, 1, 589835, 65540, 1, 524297, 65540, 1, 524298, 65540, 1, 524273, 65540, 1, 589809, 65540, 1, 720881, 65540, 1, 786417, 65540, 1, 851953, 65540, 1, 917489, 65540, 1, 983025, 65540, 1, 1048561, 65540, 1, 1114097, 65540, 1, 1179633, 65540, 1, 1245169, 65540, 1, 1376241, 65540, 1, 1441777, 65540, 1, 1507313, 65540, 1, 524274, 65540, 1, 851954, 65540, 1, 1376242, 65540, 1, 1507314, 65540, 1, 524275, 65540, 1, 655347, 65540, 1, 720883, 65540, 1, 851955, 65540, 1, 983027, 65540, 1, 1114099, 65540, 1, 1179635, 65540, 1, 1245171, 65540, 1, 1376243, 65540, 1, 1507315, 65540, 1, 524276, 65540, 1, 720884, 65540, 1, 983028, 65540, 1, 1245172, 65540, 1, 1376244, 65540, 1, 1507316, 65540, 1, 524277, 65540, 1, 589813, 65540, 1, 720885, 65540, 1, 851957, 65540, 1, 917493, 65540, 1, 983029, 65540, 1, 1114101, 65540, 1, 1507317, 65540, 1, 524278, 65540, 1, 1114102, 65540, 1, 1179638, 65540, 1, 1245174, 65540, 1, 1310710, 65540, 1, 1441782, 65540, 1, 1507318, 65540, 1, 524279, 65540, 1, 589815, 65540, 1, 655351, 65540, 1, 720887, 65540, 1, 786423, 65540, 1, 851959, 65540, 1, 917495, 65540, 1, 983031, 65540, 1, 1507319, 65540, 1, 524280, 65540, 1, 1179640, 65540, 1, 1245176, 65540, 1, 1310712, 65540, 1, 1376248, 65540, 1, 1507320, 65540, 1, 524281, 65540, 1, 655353, 65540, 1, 786425, 65540, 1, 917497, 65540, 1, 1048569, 65540, 1, 1376249, 65540, 1, 1507321, 65540, 1, 524282, 65540, 1, 655354, 65540, 1, 786426, 65540, 1, 851962, 65540, 1, 917498, 65540, 1, 1048570, 65540, 1, 1179642, 65540, 1, 1245178, 65540, 1, 1310714, 65540, 1, 1376250, 65540, 1, 1507322, 65540, 1, 655355, 65540, 1, 851963, 65540, 1, 1048571, 65540, 1, 1245179, 65540, 1, 1376251, 65540, 1, 1507323, 65540, 1, 524284, 65540, 1, 589820, 65540, 1, 655356, 65540, 1, 786428, 65540, 1, 851964, 65540, 1, 917500, 65540, 1, 1048572, 65540, 1, 1114108, 65540, 1, 1245180, 65540, 1, 1376252, 65540, 1, 1441788, 65540, 1, 1507324, 65540, 1, 524285, 65540, 1, 1507325, 65540, 1, 524286, 65540, 1, 589822, 65540, 1, 720894, 65540, 1, 786430, 65540, 1, 851966, 65540, 1, 917502, 65540, 1, 983038, 65540, 1, 1114110, 65540, 1, 1245182, 65540, 1, 1310718, 65540, 1, 1376254, 65540, 1, 1507326, 65540, 1, 524287, 65540, 1, 1114111, 65540, 1, 1245183, 65540, 1, 1507327, 65540, 1, 1048576, 65540, 1, 1179648, 65540, 1, 1245184, 65540, 1, 1310720, 65540, 1, 1376256, 65540, 1, 1441792, 65540, 1, 1048591, 65540, 1, 1114127, 65540, 1, 1179663, 65540, 1, 1245199, 65540, 1, 1376271, 65540, 1, 1441807, 65540, 1, 1507343, 65540, 1, 524304, 65540, 1, 851984, 65540, 1, 1376272, 65540, 1, 1507344, 65540, 1, 524305, 65540, 1, 655377, 65540, 1, 720913, 65540, 1, 851985, 65540, 1, 983057, 65540, 1, 1114129, 65540, 1, 1179665, 65540, 1, 1245201, 65540, 1, 1376273, 65540, 1, 1507345, 65540, 1, 524306, 65540, 1, 720914, 65540, 1, 983058, 65540, 1, 1245202, 65540, 1, 1376274, 65540, 1, 1507346, 65540, 1, 524307, 65540, 1, 589843, 65540, 1, 720915, 65540, 1, 851987, 65540, 1, 917523, 65540, 1, 983059, 65540, 1, 1114131, 65540, 1, 1507347, 65540, 1, 524308, 65540, 1, 1114132, 65540, 1, 1179668, 65540, 1, 1245204, 65540, 1, 1310740, 65540, 1, 1441812, 65540, 1, 1507348, 65540, 1, 524309, 65540, 1, 589845, 65540, 1, 655381, 65540, 1, 720917, 65540, 1, 786453, 65540, 1, 851989, 65540, 1, 917525, 65540, 1, 983061, 65540, 1, 1507349, 65540, 1, 524310, 65540, 1, 1179670, 65540, 1, 1245206, 65540, 1, 1310742, 65540, 1, 1376278, 65540, 1, 1507350, 65540, 1, 524311, 65540, 1, 655383, 65540, 1, 786455, 65540, 1, 917527, 65540, 1, 1048599, 65540, 1, 1376279, 65540, 1, 1507351, 65540, 1, 524312, 65540, 1, 655384, 65540, 1, 786456, 65540, 1, 851992, 65540, 1, 917528, 65540, 1, 1048600, 65540, 1, 1179672, 65540, 1, 1245208, 65540, 1, 1310744, 65540, 1, 1376280, 65540, 1, 1507352, 65540, 1, 655385, 65540, 1, 851993, 65540, 1, 1048601, 65540, 1, 1245209, 65540, 1, 1376281, 65540, 1, 1507353, 65540, 1, 524314, 65540, 1, 589850, 65540, 1, 655386, 65540, 1, 786458, 65540, 1, 851994, 65540, 1, 917530, 65540, 1, 1048602, 65540, 1, 1114138, 65540, 1, 1245210, 65540, 1, 1376282, 65540, 1, 1441818, 65540, 1, 1507354, 65540, 1, 524315, 65540, 1, 1507355, 65540, 1, 524316, 65540, 1, 589852, 65540, 1, 720924, 65540, 1, 786460, 65540, 1, 851996, 65540, 1, 917532, 65540, 1, 983068, 65540, 1, 1114140, 65540, 1, 1245212, 65540, 1, 1310748, 65540, 1, 1376284, 65540, 1, 1507356, 65540, 1, 524317, 65540, 1, 1114141, 65540, 1, 1245213, 65540, 1, 1507357, 65540, 1, 524318, 65540, 1, 589854, 65540, 1, 655390, 65540, 1, 720926, 65540, 1, 786462, 65540, 1, 917534, 65540, 1, 983070, 65540, 1, 1048606, 65540, 1, 1114142, 65540, 1, 1245214, 65540, 1, 1310750, 65540, 1, 1376286, 65540, 1, 1441822, 65540, 1, 1507358, 65540, 1, -458737, 65540, 1, -393201, 65540, 1, -262129, 65540, 1, -196593, 65540, 1, -131057, 65540, 1, -65521, 65540, 1, -458736, 65540, 1, -131056, 65540, 1, 393232, 65540, 1, -458735, 65540, 1, -327663, 65540, 1, -262127, 65540, 1, -131055, 65540, 1, 17, 65540, 1, 131089, 65540, 1, 196625, 65540, 1, 262161, 65540, 1, 393233, 65540, 1, -458734, 65540, 1, -262126, 65540, 1, 18, 65540, 1, 262162, 65540, 1, 393234, 65540, 1, -458733, 65540, 1, -393197, 65540, 1, -262125, 65540, 1, -131053, 65540, 1, -65517, 65540, 1, 19, 65540, 1, 131091, 65540, 1, -458732, 65540, 1, 131092, 65540, 1, 196628, 65540, 1, 262164, 65540, 1, 327700, 65540, 1, 458772, 65540, 1, -458731, 65540, 1, -393195, 65540, 1, -327659, 65540, 1, -262123, 65540, 1, -196587, 65540, 1, -131051, 65540, 1, -65515, 65540, 1, 21, 65540, 1, -458730, 65540, 1, 196630, 65540, 1, 262166, 65540, 1, 327702, 65540, 1, 393238, 65540, 1, -458729, 65540, 1, -327657, 65540, 1, -196585, 65540, 1, -65513, 65540, 1, 65559, 65540, 1, 393239, 65540, 1, -458728, 65540, 1, -327656, 65540, 1, -196584, 65540, 1, -131048, 65540, 1, -65512, 65540, 1, 65560, 65540, 1, 196632, 65540, 1, 262168, 65540, 1, 327704, 65540, 1, 393240, 65540, 1, -327655, 65540, 1, -131047, 65540, 1, 65561, 65540, 1, 262169, 65540, 1, 393241, 65540, 1, 524313, 65540, 1, -458726, 65540, 1, -393190, 65540, 1, -327654, 65540, 1, -196582, 65540, 1, -131046, 65540, 1, -65510, 65540, 1, 65562, 65540, 1, 131098, 65540, 1, 262170, 65540, 1, 393242, 65540, 1, 458778, 65540, 1, -458725, 65540, 1, -458724, 65540, 1, -393188, 65540, 1, -262116, 65540, 1, -196580, 65540, 1, -131044, 65540, 1, -65508, 65540, 1, 28, 65540, 1, 131100, 65540, 1, 262172, 65540, 1, 327708, 65540, 1, 393244, 65540, 1, -458723, 65540, 1, 131101, 65540, 1, 262173, 65540, 1, -458722, 65540, 1, -393186, 65540, 1, -327650, 65540, 1, -262114, 65540, 1, -196578, 65540, 1, -65506, 65540, 1, 30, 65540, 1, 65566, 65540, 1, 131102, 65540, 1, 262174, 65540, 1, 327710, 65540, 1, 393246, 65540, 1, 458782, 65540, 1, -458767, 65540, 1, -393231, 65540, 1, -262159, 65540, 1, -196623, 65540, 1, -131087, 65540, 1, -65551, 65540, 1, -15, 65540, 1, 65521, 65540, 1, 131057, 65540, 1, 196593, 65540, 1, 262129, 65540, 1, 393201, 65540, 1, 458737, 65540, 1, -458766, 65540, 1, -131086, 65540, 1, 393202, 65540, 1, -458765, 65540, 1, -327693, 65540, 1, -262157, 65540, 1, -131085, 65540, 1, -13, 65540, 1, 131059, 65540, 1, 196595, 65540, 1, 262131, 65540, 1, 393203, 65540, 1, -458764, 65540, 1, -262156, 65540, 1, -12, 65540, 1, 262132, 65540, 1, 393204, 65540, 1, -458763, 65540, 1, -393227, 65540, 1, -262155, 65540, 1, -131083, 65540, 1, -65547, 65540, 1, -11, 65540, 1, 131061, 65540, 1, -458762, 65540, 1, 131062, 65540, 1, 196598, 65540, 1, 262134, 65540, 1, 327670, 65540, 1, 458742, 65540, 1, -458761, 65540, 1, -393225, 65540, 1, -327689, 65540, 1, -262153, 65540, 1, -196617, 65540, 1, -131081, 65540, 1, -65545, 65540, 1, -9, 65540, 1, -458760, 65540, 1, 196600, 65540, 1, 262136, 65540, 1, 327672, 65540, 1, 393208, 65540, 1, -458759, 65540, 1, -327687, 65540, 1, -196615, 65540, 1, -65543, 65540, 1, 65529, 65540, 1, 393209, 65540, 1, -458758, 65540, 1, -327686, 65540, 1, -196614, 65540, 1, -131078, 65540, 1, -65542, 65540, 1, 65530, 65540, 1, 196602, 65540, 1, 262138, 65540, 1, 327674, 65540, 1, 393210, 65540, 1, -327685, 65540, 1, -131077, 65540, 1, 65531, 65540, 1, 262139, 65540, 1, 393211, 65540, 1, 524283, 65540, 1, -458756, 65540, 1, -393220, 65540, 1, -327684, 65540, 1, -196612, 65540, 1, -131076, 65540, 1, -65540, 65540, 1, 65532, 65540, 1, 131068, 65540, 1, 262140, 65540, 1, 393212, 65540, 1, 458748, 65540, 1, -458755, 65540, 1, -458754, 65540, 1, -393218, 65540, 1, -262146, 65540, 1, -196610, 65540, 1, -131074, 65540, 1, -65538, 65540, 1, -2, 65540, 1, 131070, 65540, 1, 262142, 65540, 1, 327678, 65540, 1, 393214, 65540, 1, -458753, 65540, 1, 131071, 65540, 1, 262143, 65540, 1, -524288, 65540, 1, -458752, 65540, 1, -393216, 65540, 1, -327680, 65540, 1, -262144, 65540, 1, -131072, 65540, 1, -65536, 65540, 1, 1507328, 65540, 1, 1572864, 65540, 1, 1638400, 65540, 1, 1703936, 65540, 1, 1835008, 65540, 1, 1900544, 65540, 1, 1966080, 65540, 1, 1310721, 65540, 1, 1835009, 65540, 1, 1966081, 65540, 1, 1114114, 65540, 1, 1179650, 65540, 1, 1310722, 65540, 1, 1441794, 65540, 1, 1572866, 65540, 1, 1638402, 65540, 1, 1703938, 65540, 1, 1835010, 65540, 1, 1966082, 65540, 1, 1179651, 65540, 1, 1441795, 65540, 1, 1703939, 65540, 1, 1835011, 65540, 1, 1966083, 65540, 1, 1048580, 65540, 1, 1179652, 65540, 1, 1310724, 65540, 1, 1376260, 65540, 1, 1441796, 65540, 1, 1572868, 65540, 1, 1966084, 65540, 1, 1572869, 65540, 1, 1638405, 65540, 1, 1703941, 65540, 1, 1769477, 65540, 1, 1900549, 65540, 1, 1966085, 65540, 1, 1048582, 65540, 1, 1114118, 65540, 1, 1179654, 65540, 1, 1245190, 65540, 1, 1310726, 65540, 1, 1376262, 65540, 1, 1441798, 65540, 1, 1966086, 65540, 1, 1638407, 65540, 1, 1703943, 65540, 1, 1769479, 65540, 1, 1835015, 65540, 1, 1966087, 65540, 1, 1114120, 65540, 1, 1245192, 65540, 1, 1376264, 65540, 1, 1507336, 65540, 1, 1835016, 65540, 1, 1966088, 65540, 1, 1114121, 65540, 1, 1245193, 65540, 1, 1310729, 65540, 1, 1376265, 65540, 1, 1507337, 65540, 1, 1638409, 65540, 1, 1703945, 65540, 1, 1769481, 65540, 1, 1835017, 65540, 1, 1966089, 65540, 1, 1114122, 65540, 1, 1310730, 65540, 1, 1507338, 65540, 1, 1703946, 65540, 1, 1835018, 65540, 1, 1966090, 65540, 1, 1048587, 65540, 1, 1114123, 65540, 1, 1245195, 65540, 1, 1310731, 65540, 1, 1376267, 65540, 1, 1507339, 65540, 1, 1572875, 65540, 1, 1703947, 65540, 1, 1835019, 65540, 1, 1900555, 65540, 1, 1966091, 65540, 1, 1966092, 65540, 1, 1048589, 65540, 1, 1179661, 65540, 1, 1245197, 65540, 1, 1310733, 65540, 1, 1376269, 65540, 1, 1441805, 65540, 1, 1572877, 65540, 1, 1703949, 65540, 1, 1769485, 65540, 1, 1835021, 65540, 1, 1966093, 65540, 1, 1572878, 65540, 1, 1703950, 65540, 1, 1966094, 65540, 1, 1572879, 65540, 1, 1703951, 65540, 1, 1769487, 65540, 1, 1835023, 65540, 1, 1900559, 65540, 1, 1966095, 65540, 1, -983040, 65540, 1, -917504, 65540, 1, -786432, 65540, 1, -720896, 65540, 1, -655360, 65540, 1, -589824, 65540, 1, -983039, 65540, 1, -655359, 65540, 1, -131071, 65540, 1, -983038, 65540, 1, -851966, 65540, 1, -786430, 65540, 1, -655358, 65540, 1, -524286, 65540, 1, -393214, 65540, 1, -327678, 65540, 1, -262142, 65540, 1, -131070, 65540, 1, -983037, 65540, 1, -786429, 65540, 1, -524285, 65540, 1, -262141, 65540, 1, -131069, 65540, 1, -983036, 65540, 1, -917500, 65540, 1, -786428, 65540, 1, -655356, 65540, 1, -589820, 65540, 1, -524284, 65540, 1, -393212, 65540, 1, -983035, 65540, 1, -393211, 65540, 1, -327675, 65540, 1, -262139, 65540, 1, -196603, 65540, 1, -65531, 65540, 1, -983034, 65540, 1, -917498, 65540, 1, -851962, 65540, 1, -786426, 65540, 1, -720890, 65540, 1, -655354, 65540, 1, -589818, 65540, 1, -524282, 65540, 1, -983033, 65540, 1, -327673, 65540, 1, -262137, 65540, 1, -196601, 65540, 1, -131065, 65540, 1, -983032, 65540, 1, -851960, 65540, 1, -720888, 65540, 1, -589816, 65540, 1, -458744, 65540, 1, -983031, 65540, 1, -851959, 65540, 1, -720887, 65540, 1, -655351, 65540, 1, -589815, 65540, 1, -458743, 65540, 1, -851958, 65540, 1, -655350, 65540, 1, -458742, 65540, 1, -983029, 65540, 1, -917493, 65540, 1, -851957, 65540, 1, -720885, 65540, 1, -655349, 65540, 1, -589813, 65540, 1, -458741, 65540, 1, -983028, 65540, 1, -983027, 65540, 1, -917491, 65540, 1, -786419, 65540, 1, -720883, 65540, 1, -655347, 65540, 1, -589811, 65540, 1, -524275, 65540, 1, -393203, 65540, 1, -262131, 65540, 1, -196595, 65540, 1, -131059, 65540, 1, -983026, 65540, 1, -393202, 65540, 1, -262130, 65540, 1, -983025, 65540, 1, -917489, 65540, 1, -851953, 65540, 1, -786417, 65540, 1, -720881, 65540, 1, -589809, 65540, 1, -524273, 65540, 1, -65525, 65540, 1, -131061, 65540, 1, -196597, 65540, 1, -262133, 65540, 1, -65527, 65540, 1, -131063, 65540, 1, -196599, 65540, 1, -262135, 65540, 1, -327671, 65540, 1, -327669, 65540, 1)

[node name="Hilos" type="TileMap" parent="Laberinto"]
visible = false
position = Vector2(8, -8)
tile_set = SubResource("TileSet_b2o0y")
format = 2
layer_0/tile_data = PackedInt32Array(655366, 196609, 1, 589830, 65537, 0, 589831, 65537, 2, 589832, 65537, 2, 589833, 65537, 2, 589834, 131073, 0, 655370, 196609, 1, 720906, 196609, 1, 786442, 196609, 1)

[node name="Teleporters" type="Node2D" parent="Laberinto"]
script = ExtResource("5_6se5o")

[node name="L1" type="Area2D" parent="Laberinto/Teleporters"]
position = Vector2(-32, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Laberinto/Teleporters/L1"]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_04386")

[node name="R1" type="Area2D" parent="Laberinto/Teleporters"]
position = Vector2(512, 320)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Laberinto/Teleporters/R1"]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_04386")

[node name="L2" type="Area2D" parent="Laberinto/Teleporters"]
position = Vector2(-32, 384)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Laberinto/Teleporters/L2"]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_04386")

[node name="R2" type="Area2D" parent="Laberinto/Teleporters"]
position = Vector2(512, 160)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Laberinto/Teleporters/R2"]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_04386")

[node name="Player" type="CharacterBody2D" parent="." node_paths=PackedStringArray("animated_sprite")]
position = Vector2(112, 176)
script = ExtResource("6_j6okp")
animated_sprite = NodePath("Sprite2D")
metadata/_edit_group_ = true

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(4, 4)
position_smoothing_speed = 16.0

[node name="Sprite2D" type="AnimatedSprite2D" parent="Player"]
rotation = 3.14159
sprite_frames = SubResource("SpriteFrames_ytphf")

[node name="PlayerCollision" type="CollisionShape2D" parent="Player"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_lcyll")

[node name="PointLight2D" type="PointLight2D" parent="Player"]
color = Color(1, 0.690196, 0.501961, 1)
energy = 0.7
shadow_enabled = true
shadow_filter_smooth = 1.5
texture = ExtResource("8_oucd7")
texture_scale = 0.6

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color(0.05, 0.01, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(336, 16)
scale = Vector2(0.25, 0.25)
texture = ExtResource("9_gp727")

[node name="Duplicados" type="Node2D" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("10_o8vti")
player = NodePath("../Player")

[node name="Players" type="Node2D" parent="Duplicados"]

[node name="Player1" type="StaticBody2D" parent="Duplicados/Players"]
position = Vector2(-368, 400)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Duplicados/Players/Player1"]
shape = SubResource("CircleShape2D_hff34")

[node name="Player2" type="StaticBody2D" parent="Duplicados/Players"]
position = Vector2(592, 432)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Duplicados/Players/Player2"]
shape = SubResource("CircleShape2D_hff34")

[node name="Player3" type="StaticBody2D" parent="Duplicados/Players"]
position = Vector2(112, 656)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Duplicados/Players/Player3"]
shape = SubResource("CircleShape2D_hff34")

[node name="Player4" type="StaticBody2D" parent="Duplicados/Players"]
position = Vector2(-368, -80)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Duplicados/Players/Player4"]
shape = SubResource("CircleShape2D_hff34")

[node name="Player5" type="StaticBody2D" parent="Duplicados/Players"]
position = Vector2(592, -48)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Duplicados/Players/Player5"]
shape = SubResource("CircleShape2D_hff34")

[node name="Player6" type="StaticBody2D" parent="Duplicados/Players"]
position = Vector2(112, -304)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Duplicados/Players/Player6"]
shape = SubResource("CircleShape2D_hff34")

[connection signal="body_entered" from="Laberinto/Teleporters/L1" to="Laberinto/Teleporters" method="_on_l_1_body_entered"]
[connection signal="body_entered" from="Laberinto/Teleporters/R1" to="Laberinto/Teleporters" method="_on_r_1_body_entered"]
[connection signal="body_entered" from="Laberinto/Teleporters/L2" to="Laberinto/Teleporters" method="_on_l_2_body_entered"]
[connection signal="body_entered" from="Laberinto/Teleporters/R2" to="Laberinto/Teleporters" method="_on_r_2_body_entered"]
